--- a/index.html
+++ b/index.html
@@ -3,50 +3,9 @@
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
+     <li><a href="https://github.com/kaibrysouthern/musical-carnival-mike" target="_blank">Kaibry's Nov/Mike Repo</a>
     </li>
 </ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
-<ul>
-    <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-</ul>
+
 
 
