--- a/index.html
+++ b/index.html
@@ -5,4 +5,9 @@
     </li>
 </ul>
 
+<ul>
+    <li><a href="https://github.com/etinnon/november-lab-486" target="_blank">Emily's November-Mike Repo</a>
+    </li>
+</ul>
+
 
