--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
 </ul>
+<ul>
+    <li><a href="https://github.com/ConnorLBrown/automatic-octo-eureka-november-classRepo" target="_blank">Connor's November-Mike Repo</a>
+    </li>
+</ul>
 
 
