--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
+        <a href="https://github.com/VikAsNeHrA1/lab_nov.git" target="blank">Vikas Nehra's November-Mike Repo</a>
     </li>
 </ul>
 
