--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
 </ul>
-
+<ul>
+    <li><a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a>
+    </li>
+</ul>
 
