--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </ul>
 
 <ul>
-    <li><a href="https://github.com/errorless-stone/cumbie-lab-november/blob/main/README.md" target="_blank"> Andrew's November-Mike Repo </a>
+    <li><a href="https://github.com/errorless-stone/cumbie-lab-november" target="_blank"> Andrew's November-Mike Repo </a>
     </li>
 </ul>
