--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
     
+    <li><a href="https://github.com/CDman814/congenial-carnival-mike-november" target="_blank">Curtis's November-Mike Repo</a>
+    </li>
+    
 </ul>
 
