--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
-    <li><a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman_nov_lab</a>
+    <li><a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman nawaria_nov_lab</a>
     </li>
     
 </ul>
