--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
+    <li><a href="https://github.com/junnoiri/cis-486-NOVEMBER" target="_blank">Jun's November-Mike Repo</a>
+    </li>
 </ul>
 
 
