--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
+    <li><a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
+    </li>
+   
 </ul>
 
 
