removed dups/added link to personal repo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <ul>
     <li><a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
     </li>
+    <li><a href="https://github.com/phenicieaaron/curly-sniffle-mike" target="_blank">Aaron's November-Mike Repo</a>
+    </li>
 </ul>
 
 
