--- a/index.html
+++ b/index.html
@@ -1,45 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>crazy class fall '23</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="./style.css">
 
-<ul>
-  <li>
-    <a href="https://github.com/hrantgartley/november-mike-hello" target="_blank">Barry's November-Mike Repo</a>
-  </li> <!-- missing a closing tag 😡-->   
-  <li>
-    <a href="https://github.com/StokeyBear/fluffy-mike-nov.git" target="_blank"> Stokes' November-Mike Repo</a>
-  <li>
-    <a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
-  </li> 
-  <li>
-     <a href="https://github.com/VikAsNeHrA1/lab_nov.git" target="blank">Vikas Nehra's November Mike Repo</a>
-  </li>
-  <li>
-    <a href="https://github.com/ConnorLBrown/automatic-octo-eureka-november-classRepo" target="_blank">Connor's November-Mike Repo</a>
-  </li>
-  <li>
-    <a href="https://github.com/kaibrysouthern/musical-carnival-mike" target="_blank">Kaibry's Nov/Mike Repo</a>
-  </li>    
-    <li><a href="https://github.com/CDman814/congenial-carnival-mike-november" target="_blank">Curtis's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/phenicieaaron/curly-sniffle-mike" target="_blank">Aaron's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/junnoiri/cis-486-NOVEMBER" target="_blank">Jun's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/errorless-stone/cumbie-lab-november" target="_blank"> Andrew's November-Mike Repo </a>
-    </li>
-    <li><a href="https://github.com/etinnon/november-lab-486" target="_blank">Emily's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/Garner-Jaiden/dev-lab-mike-486" target="_blank">Jaiden's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman nawaria_nov_lab</a>
-    </li>
-    <li><a href="https://github.com/westonhumphries/super-duper-train-mike" target="_blank">Barry's November-Mike Repo</a>
-    </li>
-    <li><a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
-    </li>
-   
+    </head>
+    <body>
 
-</ul>
+        <div class="container-fluid">
 
+						<h1>our crazy class repo</h1>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a href="https://github.com/hrantgartley/november-mike-hello" target="_blank">Barry's November-Mike Repo</a>
+                </li>
+                
+                <li class="list-group-item">
+                    <a href="https://github.com/StokeyBear/fluffy-mike-nov.git" target="_blank">
+                        Stokes' November-Mike Repo</a>
+                </li>
+
+								<li class="list-group-item">
+                    <a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/VikAsNeHrA1/lab_nov.git" target="blank">Vikas Nehra's November Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/ConnorLBrown/automatic-octo-eureka-november-classRepo" target="_blank">Connor's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/kaibrysouthern/musical-carnival-mike" target="_blank">Kaibry's Nov/Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/CDman814/congenial-carnival-mike-november" target="_blank">Curtis's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/phenicieaaron/curly-sniffle-mike" target="_blank">Aaron's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/junnoiri/cis-486-NOVEMBER" target="_blank">Jun's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/errorless-stone/cumbie-lab-november" target="_blank">
+                        Andrew's November-Mike Repo
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/etinnon/november-lab-486" target="_blank">Emily's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/Garner-Jaiden/dev-lab-mike-486" target="_blank">Jaiden's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman nawaria_nov_lab</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/westonhumphries/super-duper-train-mike" target="_blank">Barry's November-Mike Repo</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
+                </li>
+
+
+            </ul>
+
+        </div>
+
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
+        <script src="./script.js"></script>
+
+    </body>
+</html>
