--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="styles/style.css">
 
     </head>
     <body>
+
+			<nav class="navbar fixed-top navbar-light bg-light navbar-expand-sm">
+
+				<span class="mx-2"> </span>
+				<a class="navbar-brand border rounded-pill text-center my-2 mx-4 px-4" href="#">
+				 <span class="fw-bold text-center" style="letter-spacing: .5em">·4·8·6·</span></a>
+				 <span class="fs-6 text-center"> capstone</span>
+			
+					<button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				
+						<div class="collapse navbar-collapse m-2 mx-4 px-4" id="collapsibleNavbar">
+						<ul class="navbar-nav mx-auto">
+							<li class="nav-item">
+								<a class="nav-link" target="_blank" href="https://github.com/barrycumbie/automatic-octo-eureka-november-classRepo" role="button">
+									repo 
+									<!-- <i class="bi bi-file-pdf-fill"></i> -->
+								</a>
+							</li>
+		
+							<!-- <li class="nav-item">
+								<a class="nav-link" href="#projectModal" data-bs-toggle="modal" data-bs-target="#projectModal" role="button">
+									Project Examples <i class="bi bi-activity"></i>`</a>
+							</li>
+		
+							<li class="nav-item">
+								<a class="nav-link" href="pages/hotel-travel.html">LinkedIn
+									<i class="bi bi-linkedin"></i>
+								</a>
+							</li> -->
+							
+						</ul>
+					<!-- </div> -->
+				</div>
+			</nav>
 
         <div class="container-fluid">
 
