added group 1 papa

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                     <a href="https://github.com/etinnon/november-lab-486" target="_blank">Emily's November-Mike Repo</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a>
+                    <a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a> | 
+                    <a href="https://github.com/mithrandiryeet/papa-lab" target="_blank">Group 1 Papa Lab</a>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a>
