--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     <a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a>
+                    <a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a> <br/>
+                    <a href="https://github.com/anhnguyen148/papalab" target="_blank">Anh & Aaron Papa Repo</a> <br/>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/Garner-Jaiden/dev-lab-mike-486" target="_blank">Jaiden's November-Mike Repo</a>
