--- a/index.html
+++ b/index.html
@@ -70,9 +70,15 @@
                 <li class="list-group-item">
                     <a href="https://github.com/VikAsNeHrA1/lab_nov.git" target="blank">Vikas Nehra's November Mike Repo</a>
                 </li>
+
+
                 <li class="list-group-item">
                     <a href="https://github.com/ConnorLBrown/automatic-octo-eureka-november-classRepo" target="_blank">Connor's November-Mike Repo</a>
+                    <a href="https://github.com/ConnorLBrown/Papa-parade-parrot" target="_blank">Connor, Anna, and Rishi's Papa project</a>
                 </li>
+
+
+                
                 <li class="list-group-item">
                     <a href="https://github.com/kaibrysouthern/musical-carnival-mike" target="_blank">Kaibry's Nov/Mike Repo</a>
                 </li>
