--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 
                 <li class="list-group-item">
                     <a href="https://github.com/kaibrysouthern/musical-carnival-mike" target="_blank">Kaibry's Nov/Mike Repo</a>
+			<a href="https://github.com/kaibrysouthern/friendly-barnacles-quebec" target="_blank">Kaibry's Quebec Repo</a>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/CDman814/congenial-carnival-mike-november" target="_blank">Curtis's November-Mike Repo</a>
