--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                     <a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman nawaria_nov_lab</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://github.com/westonhumphries/super-duper-train-mike" target="_blank">Barry's November-Mike Repo</a>
+                    <a href="https://github.com/westonhumphries/super-duper-train-mike" target="_blank">Weston's November-Mike Repo</a>
+		    <a href="https://github.com/westonhumphries/symmetrical-octo-computing-machine-Quebec" target="_blank">Weston's Quebec Repo</a>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
