--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <a href="https://github.com/Garner-Jaiden/lab-papa-486" target="_blank">Jaiden's and Andrew's Papa Repo</a>
                 </li>
                 <li class="list-group-item">
+                    <a href="https://github.com/Garner-Jaiden/lab-papa-486" target="_blank">Jaiden's Quebec Repo</a>
+                </li>
+                <li class="list-group-item">
                     <a href="https://github.com/amannawaria12/november-mike_lab" target="_blank">aman nawaria_nov_lab</a>
                 </li>
                 <li class="list-group-item">
