added barrys papa repo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="container-fluid">
 
-						<h1>our crazy class repo</h1>
+		  <h1>our crazy class repo</h1>
             <ul class="list-group">
                 <li class="list-group-item">
                     <a href="https://github.com/hrantgartley/oak-spark-papa" target="_blank">Grant's Papa Repo</a>
@@ -64,9 +64,12 @@
     
                 </li>
 
-								<li class="list-group-item">
-                    <a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a>
+				<li class="list-group-item">
+                    <a href="https://github.com/barrycumbie/reimagined-guide-november-mike" target="_blank">Barry's November-Mike Repo</a> | 
+                    <a class="btn btn-info" href="https://github.com/barrycumbie/cuddly-palm-not-tree-papa-solution" target="_blank">Barry's Papa Solution REPO</a>
                 </li>
+
+
                 <li class="list-group-item">
                     <a href="https://github.com/VikAsNeHrA1/lab_nov.git" target="blank">Vikas Nehra's November Mike Repo</a>
                 </li>
