--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<h1>our crazy class repo</h1>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <a href="https://github.com/hrantgartley/november-mike-hello" target="_blank">Barry's November-Mike Repo</a>
+                    <a href="https://github.com/hrantgartley/oak-spark-papa" target="_blank">Grant's quebec</a>
                 </li>
                 
                 <li class="list-group-item">
