--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
                 <li class="list-group-item">
                     <a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
                 </li>
+                <li class="list-group-item">
+                    <a href="https://github.com/VikAsNeHrA1/DEV-LAB-QUEBEC" target="_blank">Vikas's Quebec Repo</a>
+                </li>
 
 
             </ul>
