--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <a href="https://github.com/rish4863/mike" target="_blank">Rishi's November-Mike Repo</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://github.com/VikAsNeHrA1/DEV-LAB-QUEBEC" target="_blank">Vikas's Quebec Repo</a>
+                    <a href="https://github.com/VikAsNeHrA1/DEV-LAB-QUEBEC" target="_blank">Vikas Nehra's Quebec Repo</a>
                 </li>
 
 
