--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/mithrandiryeet/mike_november" target="_blank">Will's November-Mike Repo</a> | 
-                    <a href="https://github.com/mithrandiryeet/papa-lab" target="_blank">Group 1 Papa Lab</a>
+                    <a href="https://github.com/mithrandiryeet/papa-lab" target="_blank">Group 1 Papa Lab</a> | 
+                    <a href="https://github.com/mithrandiryeet/quebec-lab-2" target="blank">Quebec Repo</a>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/anhnguyen148/novemberlab" target="_blank">Anh's November-Mike Repo</a> <br/>
