--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <li class="list-group-item">
                     <a href="https://github.com/ConnorLBrown/automatic-octo-eureka-november-classRepo" target="_blank">Connor's November-Mike Repo</a>
                     <a href="https://github.com/ConnorLBrown/Papa-parade-parrot" target="_blank">Connor, Anna, and Rishi's Papa project</a>
+                    <a href="https://github.com/ConnorLBrown/Quil-Quest-Quebec" target="_blank">Connor's Quebec </a>
                 </li>
 
 
