added aarons quebec repo

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                     <a href="https://github.com/CDman814/congenial-carnival-mike-november" target="_blank">Curtis's November-Mike Repo</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://github.com/phenicieaaron/curly-sniffle-mike" target="_blank">Aaron's November-Mike Repo</a>
+                    <a href="https://github.com/phenicieaaron/curly-sniffle-mike" target="_blank">Aaron's November-Mike Repo</a> |
+                    <a href="https://github.com/phenicieaaron/quebec-3" target="_blank">Aaron's Quebec Repo</a>
                 </li>
                 <li class="list-group-item">
                     <a href="https://github.com/junnoiri/cis-486-NOVEMBER" target="_blank">Jun's November-Mike Repo</a>
