--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                     </a>
                 </li>
                 <li class="list-group-item">
+                    <a href="https://github.com/errorless-stone/cumbie-quebec" target="_blank">
+                        Andrew's Quebec Repo
+                    </a>
+                </li>
+                <li class="list-group-item">
                     <a href="https://github.com/etinnon/november-lab-486" target="_blank">Emily's November-Mike Repo</a>
                     <a href="https://github.com/etinnon/papa-dev-lab" target="_blank">Team 6's Papa Repo</a>
 			<a href="https://github.com/etinnon/papa-dev-lab" target="_blank">Emily's Quebec Repo</a>
